# mini_state_machine

./: .gitignore  CMakeLists.txt  README.md
include/: blackboard.hpp  engine.hpp  state.hpp
src/: blackboard.cpp  engine.cpp  state.cpp
test/: blackboard_test1.cpp
